--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "test": "jest",
-    "test:": "jest --watchAll"
+    "test:watch": "jest --watchAll"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
